# user-management

./: .gitignore  CMakeLists.txt  DEPENDENCIES.md  KiemtraUsernametontai.cpp  Luuvaodanhsachlienket.cpp  MenuDangky_kiemtrahople.cpp  README.md  Taovi_xemsodu.cpp  docker-compose.yml  user_data.cpp
config/: README.md  database-example.conf  database-sample.conf
database/: transaction_log.csv  users.csv  users.txt  wallet.csv
docker/: Dockerfile.dev  setup.sh
docs/: SETUP.md
documents/: PROJECT_ANALYSIS.md  SETUP.md
examples/: xdevapi-sample.cpp
src/: main.cpp
src/config_loader/: ConfigLoader.cpp  ConfigLoader.h
src/database/: DBConnection.cpp  DBConnection.h  MySQLConnection.cpp  MySQLConnection.h  db_connection.cpp  db_connection.h
src/database-config/: DatabaseConfig.cpp  DatabaseConfig.h
src/database-constants/: TransactionQueries.h  TransactionTable.h  UserQueries.h  UserTable.h  WalletQueries.h  WalletTable.h
src/database_config/: database_config.cpp  database_config.h
src/database_constants/: transaction_queries.h  transaction_table.h  user_queries.h  user_table.h  wallet_queries.h  wallet_table.h
src/menu_controller/: menu_controller.cpp  menu_controller.h  menu_list.h
src/menu_display/: interface_menu_display.h  menu_display.cpp  menu_display.h
src/menu_system/: menu_system.cpp  menu_system.h
src/model/: transaction_log.h  user.h  wallet.h
src/password_manager/: password_manager.cpp  password_manager.h
src/repository/transaction_data/: interface_transaction_data.h  transaction_data.cpp  transaction_data.h
src/repository/user_data/: interface_user_data.h  user_data.cpp  user_data.h
src/repository/wallet_data/: interface_wallet_data.h  wallet_data.cpp  wallet_data.h
src/role/: role.cpp  role.h
src/service/authentication/: authentication_service.cpp  authentication_service.h  interface_authentication_service.h
src/service/menu_action/: interface_menu_action.h  menu_action.cpp  menu_action.h
src/service/password_handler/: password_handler.cpp  password_handler.h
src/service/wallet/: interface_wallet_service.h  wallet_service.cpp  wallet_service.h
src/user/: admin.h  customer.h  user.h  user_management.cpp  user_management.h
src/user_data/: interface_user_data.h  user_data.cpp  user_data.h
src/user_management/: user_management.cpp  user_management.h
src/utils/: convert.h  date_time.h  formatter.h  list.h  password_handler.h
src/utils/list/: list.h
src/utils/password_handler/: password_handler.cpp  password_handler.h
src/utils/password_manager/: password_manager.cpp
src/utils/print/: print_data.h
src/utils/stack/: stack.h
src/utils/validator/: validator.cpp  validator.h
